--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,21 @@
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
-
+        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
 
