--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
